force-app/main/default/objects/ODAS__c/fields/Courthouse_Output__c.field-meta.xml
<CustomField>
    <fullName>Courthouse_Output__c</fullName>
    <description>Formula field to migrate the Courthouse information from the Meeting to the ODA object.</description>
    <formula>Meeting__r.Courthouse__r.Name &amp; BR() &amp; Meeting__r.Courthouse__r.Address_1__c &amp; &quot; &quot; &amp; Meeting__r.Courthouse__r.Address_2__c &amp; BR() &amp;
Meeting__r.Courthouse__r.City__c &amp; &quot;, &quot; &amp; Meeting__r.Courthouse__r.State__c &amp; &quot; &quot; &amp; Meeting__r.Courthouse__r.Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Courthouse Output</label>
    <type>Text</type>
</CustomField>