force-app/main/default/objects/ODAS__c/fields/File_Output_Field_Case_and_Employer__c.field-meta.xml
<CustomField>
    <fullName>File_Output_Field_Case_and_Employer__c</fullName>
    <description>Formula field created per Jan Joy&#39;s request to have Case # and Employer in output file name from the related case.</description>
    <formula>Case_Management__r.Case_Number__c &amp; &quot; &quot; &amp; Case_Management__r.Employer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Output Field - Case # and Employer</label>
    <type>Text</type>
</CustomField>