force-app/main/default/objects/ODAS__c/fields/Imported_From__c.field-meta.xml
<CustomField>
    <fullName>Imported_From__c</fullName>
    <description>For Migrated ODAs</description>
    <label>Imported From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VNO-WCA</fullName>
            </value>
            <value>
                <fullName>GARMENT</fullName>
            </value>
            <value>
                <fullName>BAK-WCA</fullName>
            </value>
            <value>
                <fullName>RDG-WCA</fullName>
            </value>
            <value>
                <fullName>STK-WCA</fullName>
            </value>
            <value>
                <fullName>SAC-WCA</fullName>
            </value>
            <value>
                <fullName>SBA-WCA</fullName>
            </value>
            <value>
                <fullName>FRE-WCA</fullName>
            </value>
            <value>
                <fullName>SRO-WCA</fullName>
            </value>
            <value>
                <fullName>SBR-WCA</fullName>
            </value>
            <value>
                <fullName>SFO-WCA</fullName>
            </value>
            <value>
                <fullName>LAO-WCA</fullName>
            </value>
            <value>
                <fullName>SDO-WCA</fullName>
            </value>
            <value>
                <fullName>SJO-WCA</fullName>
            </value>
            <value>
                <fullName>OAK-WCA</fullName>
            </value>
            <value>
                <fullName>ANA-WCA</fullName>
            </value>
            <value>
                <fullName>LBO-WCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>