force-app/main/default/objects/ODAS__c/fields/Joint_Liability__c.field-meta.xml
<CustomField>
    <fullName>Joint_Liability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag set when saving an ODA for parties that are jointly liable or joint employers. Allows for the production of output documents that combine the liable parties and name them appropriately</description>
    <inlineHelpText>If there are multiple entities that are party to this ODA and they are jointly liable, this field will be checked.</inlineHelpText>
    <label>Joint Liability</label>
    <type>Checkbox</type>
</CustomField>