force-app/main/default/objects/ODAS__c/fields/Number_of_Days_to_ODA__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_to_ODA__c</fullName>
    <formula>Decision_Date__c -  Case_Management__r.Date_of_Docket__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days to ODA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>