force-app/main/default/objects/ODAS__c/fields/Number_of_Pages__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pages__c</fullName>
    <description>Number of pages of the written decision.</description>
    <label>Number of Pages</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>