force-app/main/default/objects/ODAS__c/fields/ODA_Amount__c.field-meta.xml
<CustomField>
    <fullName>ODA_Amount__c</fullName>
    <description>The sum of the proportionate share on all related Liable Parties.</description>
    <label>ODA Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>