force-app/main/default/objects/ODAS__c/fields/ODA_Amount_that_accrues_interest__c.field-meta.xml
<CustomField>
    <fullName>ODA_Amount_that_accrues_interest__c</fullName>
    <description>Filled in by deputy when producing a Judgment from this ODA</description>
    <inlineHelpText>Open the ODA document, total the amounts that should accrue interest, and fill in that value here before clicking &quot;Create Judgment&quot;</inlineHelpText>
    <label>ODA Amount that accrues interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>